--- a/missing-data/index.html
+++ b/missing-data/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Missing Data</title>
-    <script type="module" crossorigin src="./assets/index.16888966.js"></script>
-    <link rel="modulepreload" href="./assets/vendor.64d9110c.js">
-    <link rel="stylesheet" href="./assets/index.564517d7.css">
+    <script type="module" crossorigin src="assets/index.16888966.js"></script>
+    <link rel="modulepreload" href="assets/vendor.64d9110c.js">
+    <link rel="stylesheet" href="assets/index.564517d7.css">
   </head>
   <body>
     <div id="root"></div>
